<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hust.stp.quannh.MainActivity">
    <item
        android:id="@+id/menu_main_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|always"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_main_add"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="always"
        android:title="@string/menu_add" />
    <item
        android:id="@+id/menu_main_filter"
        android:icon="@drawable/ic_action_filter"
        app:showAsAction="always"
        android:title="@string/menu_filter">
        <menu>
            <item android:id="@+id/all_filter"
                android:title="@string/all_filter" />
            <item android:id="@+id/check_filter"
                android:title="@string/check_filter" />
            <item android:id="@+id/uncheck_filter"
                android:title="@string/uncheck_filter" />
        </menu>
    </item>
</menu>